hphp/test/zend/good/ext/standard/tests/file/bug53241.php.skipif
<?hh
/* unfortunately no standard function does a cast to FILE*, so we need
 * curl to test this */
<<__EntryPoint>> function main(): void {
if (!extension_loaded("curl")) exit("skip curl extension not loaded");
}
